--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -4,12 +4,12 @@ backend:
 media_folder: 'static/images'
 public_folder: '/images'
 collections:
-  - name: 'blog'
-    label: 'Blog'
+  - name: 'writing'
+    label: 'Writing'
     format: 'json'
-    folder: 'assets/content/blog'
+    folder: 'assets/content/writing'
     create: true
-    slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
+    slug: '{{slug}}'
     editor:
       preview: false
     fields:
