switch over to markdown-based posts

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -6,7 +6,7 @@ public_folder: '/images'
 collections:
   - name: 'writing'
     label: 'Writing'
-    format: 'json'
+    format: 'frontmatter'
     folder: 'assets/content/writing'
     path: '{{slug}}/{{slug}}'
     media_folder: ''
