--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/markdownit": "^1.2.9",
+    "frontmatter-markdown-loader": "^3.3.0",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
