--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,16 +1,14 @@
 backend:
   name: git-gateway
   branch: master
-media_folder: 'static/images'
-public_folder: '/images'
+media_folder: 'static/media'
+public_folder: '/media'
 collections:
   - name: 'writing'
     label: 'Writing'
     format: 'frontmatter'
     folder: 'assets/content/writing'
     path: '{{slug}}/{{slug}}'
-    media_folder: ''
-    public_folder: ''
     create: true
     editor:
       preview: false
