--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ava/babel": "^1.0.0",
     "@mdi/js": "^5.0.45",
     "@nuxtjs/eslint-module": "^1.0.0",
+    "@nuxtjs/style-resources": "^1.0.0",
     "@vue/test-utils": "^1.0.0-beta.27",
     "ava": "^3.0.0",
     "babel-eslint": "^10.0.1",
@@ -30,9 +31,11 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-prettier": "^3.1.2",
+    "node-sass": "^4.13.1",
     "prettier": "^1.19.1",
     "require-extension-hooks": "^0.3.3",
     "require-extension-hooks-babel": "^1.0.0",
-    "require-extension-hooks-vue": "^2.0.0"
+    "require-extension-hooks-vue": "^2.0.0",
+    "sass-loader": "^8.0.2"
   }
 }
