--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-prettier": "^3.1.2",
-    "frontmatter-markdown-loader": "^3.4.2",
+    "frontmatter-markdown-loader": "^3.4.3-0",
     "markdown-it": "^10.0.0",
     "markdown-it-prism": "^2.0.5",
     "prettier": "^1.19.1",
