--- a/package.json
+++ b/package.json
@@ -7,29 +7,30 @@
     "dev": "nuxt dev",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lint": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
     "test": "ava",
     "test:unit": "cross-env TEST=unit ava ./test/specs/**/*",
     "test:e2e": "cross-env TEST=e2e ava ./test/e2e/**/*"
   },
   "dependencies": {
+    "@nuxtjs/eslint-config": "^5.0.0",
     "nuxt": "^2.14.12",
     "vue-template-compiler": "^2.6.12"
   },
   "devDependencies": {
     "@ava/babel": "^1.0.0",
     "@mdi/js": "^5.0.45",
-    "@nuxtjs/eslint-module": "^1.0.0",
+    "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/vuetify": "^1.0.0",
     "@vue/test-utils": "^1.0.0-beta.27",
     "ava": "^3.0.0",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.1.0",
     "babel-plugin-module-resolver": "^3.2.0",
     "browser-env": "^3.2.5",
-    "eslint": "^6.1.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-nuxt": ">=0.4.2",
-    "eslint-plugin-prettier": "^3.1.2",
+    "eslint": "^7.19.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-nuxt": "^2.0.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "frontmatter-markdown-loader": "^3.6.2",
     "markdown-it": "^12.0.4",
     "markdown-it-prism": "^2.0.5",
