--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "vue-template-compiler": "^2.6.12"
   },
   "devDependencies": {
-    "@ava/babel": "^1.0.0",
+    "@ava/babel": "^1.0.1",
     "@mdi/js": "^5.0.45",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/vuetify": "^1.0.0",
-    "@vue/test-utils": "^1.0.0-beta.27",
-    "ava": "^3.0.0",
+    "@vue/test-utils": "^1.1.3",
+    "ava": "^3.15.0",
     "babel-eslint": "^10.1.0",
-    "babel-plugin-module-resolver": "^3.2.0",
+    "babel-plugin-module-resolver": "^4.1.0",
     "browser-env": "^3.2.5",
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
@@ -34,7 +34,7 @@
     "frontmatter-markdown-loader": "^3.6.2",
     "markdown-it": "^12.0.4",
     "markdown-it-prism": "^2.0.5",
-    "prettier": "^1.19.1",
+    "prettier": "^2.2.1",
     "require-extension-hooks": "^0.3.3",
     "require-extension-hooks-babel": "^1.0.0",
     "require-extension-hooks-vue": "^2.0.0"
